--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
-  "name": "node-api-framework",
+  "name": "pdf2img",
   "version": "1.0.0",
-  "description": "A standard Node.js API framework using Express",
+  "description": "",
   "main": "app.js",
   "scripts": {
-    "clean": "npm config set engine-strict true && rm -rf ./output",
-    "start": "npm run clean && node --verbose --max-old-space-size=4096 --expose-gc app.js",
-    "dev": "npm run clean && nodemon --verbose --max-old-space-size=8192 --legacy-watch --expose-gc app.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js",
+    "pm2": "pm2 start app.js --watch"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "@mswjs/interceptors": "^0.39.6",
     "canvas": "^3.1.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "nodemon": "^2.0.22",
+    "pm2": "^5.3.0",
     "node-fetch": "^3.3.2",
     "pdfjs-dist": "^5.4.54"
   },
@@ -20,9 +25,6 @@
     "nodemon": "^3.0.1"
   },
   "type": "module",
-  "overrides": {
-    "canvas": "^3.1.2"
-  },
   "engines": {
     "node": ">=20.0.0"
   }
