--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
-    "pm2": "pm2 start app.js --watch"
+    "pm2": "pm2 start app.js --no-daemon"
   },
   "keywords": [],
   "author": "",
