--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
 PORT=3000
 NODE_ENV=development
 OUTPUT_DIR='./output'
+
+SSM_SECURED_ACCESS_KEY_RUNTIME_DEVICE_FINGERPRINT="01c5e7b8-7657ab789fe054-40bb6b1dfe0873-93798271f95ec4-0f18d8c0649d1e75"
+SSM_SECURED_ACCESS_KEY_PROFILE="/usr/local/aksk/profile.json"
+SSM_SECURED_ACCESS_KEY_PROFILE_DECRYPT_KEY_DIR="/usr/local/aksk"
+SSM_SECURED_ACCESS_KEY_PROFILE_DECRYPT_KEY_NAME="whitebox.bin"
+COS_SECRET_TAG='AKSK_tag_ssm_e04b845c_cb9a_4e34_9a06_1482ad96ba33'
