--- a/package.json
+++ b/package.json
@@ -6,19 +6,22 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
-    "pm2": "pm2 start app.js --no-daemon"
+    "pm2": "pm2 start app.js --no-daemon --env production",
+    "prod": "node entry.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@mswjs/interceptors": "^0.39.6",
+    "@tencent/ssm-sdk-nodejs": "^1.0.8",
+    "cos-nodejs-sdk-v5": "^2.16.0-beta.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "nodemon": "^2.0.22",
-    "pm2": "^5.3.0",
     "node-fetch": "^3.3.2",
-    "pdfjs-dist": "^5.4.54"
+    "nodemon": "^2.0.22",
+    "pdfjs-dist": "^5.4.54",
+    "pm2": "^5.3.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
