--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "node-fetch": "^3.3.2",
     "nodemon": "^2.0.22",
     "pdfjs-dist": "^5.4.54",
-    "pm2": "^5.3.0"
+    "pm2": "^5.3.0",
+    "pm2-logrotate": "^2.7.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
