--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "node app.js",
     "dev": "NODE_ENV=dev nodemon app.js",
     "pm2": "pm2 start app.js --no-daemon --env production",
-    "test": "node ./test-local.js",
+    "test": "npm run test:api",
+    "test:integration": "node test/integration/api-pdf2img.test.mjs",
+    "test:performance": "node ./test-local.js",
     "docker:push": "node ./tool/exec-docker-push.js",
     "prod": "node entry.js"
   },
@@ -17,7 +19,7 @@
   "dependencies": {
     "@mswjs/interceptors": "^0.39.6",
     "@tencent/ssm-sdk-nodejs": "^1.0.8",
-    "cos-nodejs-sdk-v5": "^2.14.6",
+    "cos-nodejs-sdk-v5": "2.14.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "nodemon": "^2.0.22",
@@ -26,8 +28,14 @@
     "pm2-logrotate": "^2.7.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.5",
+    "@babel/preset-env": "^7.28.5",
+    "@types/jest": "^29.5.8",
+    "babel-jest": "^30.2.0",
+    "jest": "^29.7.0",
     "node-fetch": "^3.3.2",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "supertest": "^6.3.3"
   },
   "type": "module",
   "engines": {
