--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3000
-OUTPUT_DIR='../output'
+OUTPUT_DIR='./output'
 
 SSM_SECURED_ACCESS_KEY_RUNTIME_DEVICE_FINGERPRINT="01c5e7b8-7657ab789fe054-40bb6b1dfe0873-93798271f95ec4-0f18d8c0649d1e75"
 SSM_SECURED_ACCESS_KEY_PROFILE="/usr/local/aksk/profile.json"
