--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "test:integration": "node test/integration/api-pdf2img.test.mjs",
     "test:performance": "node ./test-local.js",
     "docker:push": "node ./tool/exec-docker-push.js",
-    "prod": "node entry.js"
+    "prod": "node entry.js",
+    "benchmark": "node ./scripts/benchmark.js all",
+    "benchmark:health": "node ./scripts/benchmark.js health",
+    "benchmark:pdf2img": "node ./scripts/benchmark.js pdf2img"
   },
   "keywords": [],
   "author": "",
@@ -24,6 +27,7 @@
     "express": "^4.18.2",
     "nodemon": "^2.0.22",
     "pdfjs-dist": "^5.4.296",
+    "piscina": "^5.1.4",
     "pm2": "^5.3.0",
     "pm2-logrotate": "^2.7.0"
   },
@@ -31,6 +35,7 @@
     "@babel/core": "^7.28.5",
     "@babel/preset-env": "^7.28.5",
     "@types/jest": "^29.5.8",
+    "autocannon": "^8.0.0",
     "babel-jest": "^30.2.0",
     "jest": "^29.7.0",
     "node-fetch": "^3.3.2",
