--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "nodemon app.js",
     "dev": "NODE_ENV=dev nodemon app.js",
     "pm2": "pm2 start app.js --no-daemon --env production",
     "test": "npm run test:api",
