--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@mswjs/interceptors": "^0.39.6",
     "@tencent/ssm-sdk-nodejs": "^1.0.8",
     "cos-nodejs-sdk-v5": "2.14.6",
+    "sharp": "^0.33.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "node-fetch": "^3.3.2",
     "nodemon": "^2.0.22",
     "pdfjs-dist": "^5.4.296",
     "piscina": "^5.1.4",
@@ -40,7 +42,6 @@
     "autocannon": "^8.0.0",
     "babel-jest": "^30.2.0",
     "jest": "^29.7.0",
-    "node-fetch": "^3.3.2",
     "nodemon": "^3.0.1",
     "supertest": "^6.3.3"
   },
