--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "pdfjs-dist": "^5.4.296",
     "piscina": "^5.1.4",
     "pm2": "^5.3.0",
-    "pm2-logrotate": "^2.7.0"
+    "pm2-logrotate": "^2.7.0",
+    "sharp": "^0.34.5"
   },
   "devDependencies": {
     "@babel/core": "^7.28.5",
