--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "nodemon app.js",
     "dev": "NODE_ENV=dev nodemon app.js",
     "pm2": "pm2 start app.js --no-daemon --env production",
-    "test": "npm run test:api",
+    "test": "pnpm run test:api",
     "test:integration": "node test/integration/api-pdf2img.test.mjs",
     "test:health": "node test/health-check.test.mjs",
     "test:health-load": "node test/health-load.test.mjs",
