--- a/native-renderer/Cargo.toml
+++ b/native-renderer/Cargo.toml
@@ -19,11 +19,17 @@ pdfium-render = { version = "0.8", features = ["thread_safe"] }
 # 图像处理
 image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
 
+# WebP 有损压缩
+webp = "0.3"
+
 # 异步运行时
-tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
+tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
 
 # 错误处理
 thiserror = "1.0"
+
+# 全局状态
+once_cell = "1.19"
 
 [build-dependencies]
 napi-build = "2"
