fix: update lockfile, remove prepublishOnly and fix macOS runner

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -37,11 +37,11 @@ jobs:
             platform: linux-arm64
             target: aarch64-unknown-linux-gnu
             
-          - os: macos-13
+          - os: macos-latest
             platform: macos-x64
             target: x86_64-apple-darwin
             
-          - os: macos-14
+          - os: macos-latest
             platform: macos-arm64
             target: aarch64-apple-darwin
             
@@ -70,7 +70,7 @@ jobs:
           version: 8
 
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: pnpm install --no-frozen-lockfile
 
       - name: Install cross-compilation tools (Linux ARM64)
         if: matrix.platform == 'linux-arm64'
@@ -136,7 +136,7 @@ jobs:
           version: 8
 
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: pnpm install --no-frozen-lockfile
 
       - name: Download all artifacts
         uses: actions/download-artifact@v4
