fix: clear lockfile before install to avoid cache issues

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -69,8 +69,11 @@ jobs:
         with:
           version: 8
 
+      - name: Clear lockfile cache
+        run: rm -f pnpm-lock.yaml
+
       - name: Install dependencies
-        run: pnpm install --no-frozen-lockfile
+        run: pnpm install
 
       - name: Install cross-compilation tools (Linux ARM64)
         if: matrix.platform == 'linux-arm64'
