fix: use bash shell for cross-platform compatibility on Windows

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -70,6 +70,7 @@ jobs:
           version: 8
 
       - name: Clear lockfile cache
+        shell: bash
         run: rm -f pnpm-lock.yaml
 
       - name: Install dependencies
@@ -87,6 +88,7 @@ jobs:
           EOF
 
       - name: Build native module
+        shell: bash
         working-directory: packages/native-renderer
         run: |
           pnpm install --no-frozen-lockfile
